# django.app

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_server.sh
django_app/: __init__.py  celery_config.py  settings.py  urls.py  views.py  worker.py
posts/: forms.py  logger.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_rename_user_profile_post_user.py  0003_alter_post_user.py
posts/templates/posts/: create_post.html  post_delete.html  post_detail.html  post_update.html  posts_list.html
tests/: conftest.py
tests/test_posts/: test_post_form.py  test_post_model.py
tests/test_user/: test_user_form.py  test_user_model.py
users/: forms.py  logger.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_email_alter_customuser_password_and_more.py  0003_alter_customuser_managers.py  0004_alter_customuser_username.py  0005_alter_customuser_managers_alter_customuser_username.py  0006_alter_customuser_email.py  0007_alter_customuser_email.py  0008_alter_customuser_email.py
users/templates/users/: base.html  home.html  index.html  login_page.html  profiles.html  register_user.html
