[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["EvgeniiShcherbina <eugene@inkit.com>"]
readme = "README.md"
packages = [{include = "django_app"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
pytest-django = "^4.5.2"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
